Swap koa-xml-body with a more efficient parser
